--- a/index.html
+++ b/index.html
@@ -453,6 +453,38 @@
     </button>
 
     <script>
+        const seqs = [
+            '0000000000000000',
+            '1000000000000000',
+            '1000000010000000',
+            '0010001000000000',
+            '0000100000001000',
+            '0000000000001100',
+            '1000001010000000',
+            '1000010010000000',
+            '0000100000101000',
+            '0000100000001010',
+            '0000100001001010',
+            '0000000000001110',
+            '1000100010001000',
+            '1000001010000010',
+            '1010010010000000',
+            '1010001010000000',
+            '1001000010100000',
+            '0010001101001000',
+            '0000100100110010',
+            '1010000010101100',
+            '1010101010110100',
+            '1010101010101010',
+            '1111111111111111',
+            'RND',
+            'U1',
+            'U2',
+            'U3',
+            'U4',
+            'U5',
+            'U6',
+        ]
         const CC = {
             VOLUME: 7,
             AUX: 14,
